--- a/Index.html
+++ b/Index.html
@@ -103,7 +103,7 @@
       </div>
       <div class="item">
         <figure>
-          <img class="ima" src="multtimedia/consola1.jpg" alt="xbox">
+          <a href=""><img class="ima" src="multtimedia/juego1.jpg" alt="xbox"></a>
         </figure>
         <div class="info-product">
           <h2>titulo</h2>
@@ -113,7 +113,7 @@
       </div>
       <div class="item">
         <figure>
-          <img class="ima" src="multtimedia/consola1.jpg" alt="xbox">
+          <a href=""><img class="ima" src="multtimedia/consola2.jpg" alt="xbox"></a>
         </figure>
         <div class="info-product">
           <h2>titulo</h2>
@@ -123,7 +123,7 @@
       </div>
       <div class="item">
         <figure>
-          <img class="ima" src="multtimedia/consola1.jpg" alt="xbox">
+          <a href=""><img class="ima" src="multtimedia/juego 2.jpg" alt="xbox"></a>
         </figure>
         <div class="info-product">
           <h2>titulo</h2>
@@ -132,6 +132,40 @@
         </div>
       </div>
     </section>
+    <section class="separador">
+      <h4>
+          <span>Productos Destacados</span>
+      </h4>
+    </section>
+    <section class="nosotross">
+     <div class="texto">
+        <p>
+          En [Nombre de tu tienda], somos apasionados por los videojuegos y las consolas. Desde nuestra fundación, nos hemos dedicado a ofrecer a nuestros clientes la mejor experiencia en el mundo del gaming. Nos enorgullece ser un destino confiable para los aficionados a los videojuegos de todas las edades y niveles de experiencia.
+        </p>
+        <p>
+          Nuestra misión es proporcionar una amplia gama de productos de alta calidad, desde los últimos lanzamientos hasta los clásicos atemporales, garantizando que nuestros clientes encuentren siempre lo que están buscando. Nos esforzamos por ofrecer un servicio excepcional y una atención al cliente personalizada, para que cada compra sea una experiencia satisfactoria y emocionante.
+        </p>
+        <p>
+          En [Nombre de tu tienda], no solo vendemos productos, sino que también compartimos la misma pasión por los videojuegos que nuestros clientes. Por eso, nos esforzamos por mantenernos actualizados con las últimas tendencias y novedades de la industria, para poder ofrecer recomendaciones expertas y asesoramiento a nuestros clientes.
+        </p>
+        <p>
+          Desde nuestro equipo hasta nuestro catálogo de productos, todo en [Nombre de tu tienda] está diseñado para brindarte la mejor experiencia de compra en línea. Estamos comprometidos con la excelencia en todo lo que hacemos y trabajamos constantemente para superar las expectativas de nuestros clientes.
+        </p>
+        <p>
+          Gracias por visitar [Nombre de tu tienda]. Esperamos poder acompañarte en tu viaje por el emocionante mundo de los videojuegos y las consolas.
+        </p>
+        <h5>
+          ¡Únete a nosotros y comienza a jugar hoy mismo!
+        </h5>
+     </div>
+     <div class="ubi">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.3772952866757!2d-100.31608332382523!3d25.725033710117867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86629452551ea79f%3A0x66e03550ec5730cb!2sFacultad%20de%20Ingenier%C3%ADa%20Mec%C3%A1nica%20y%20El%C3%A9ctrica!5e0!3m2!1ses-419!2smx!4v1709271797746!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+     </div>
+    </section>
+    <footer>
+      <a href="index.html"><img src="multtimedia/logo.png" alt="logo"></a>
+      <h2>©2024 Cuevigames SA de CV.</h2>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
