--- a/consolas.html
+++ b/consolas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cuevigames - Inicio</title>
+    <title>Pre-entrega3</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
@@ -54,37 +54,9 @@
           </div>
       </nav>
     </header>
-    <section>
-      <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="multtimedia/fondo1.jpg" class="d-block w-100" alt="jersey-charly">
-          </div>
-          <div class="carousel-item">
-            <img src="multtimedia/fondo2.jpg" class="d-block w-100" alt="mariovsdonkey">
-          </div>
-          <div class="carousel-item">
-            <img src="multtimedia/fondo3.jpg" class="d-block w-100" alt="madden">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </section>
     <section class="separador">
       <h4>
-          <span>Productos Destacados</span>
+          <span>Consolas</span>
       </h4>
     </section>
     <section class="container-item">
@@ -125,43 +97,11 @@
         <div class="info-product">
           <h2>FC24</h2>
           <p class="price">$1,599lkj
-
+            
           </p>
           <button type="button" class="botonadolfo">Comprar</button>
         </div>
       </div>
-    </section>
-    <section class="separador">
-      <h4>
-          <span>Productos Destacados</span>
-      </h4>
-    </section>
-    <section  id="nosotrosss" class="nosotross">
-     <div class="texto">
-        <h2>Un poco de nuestra esencia.</h2>
-        <p>
-          En Cuevigames, somos apasionados por los videojuegos y las consolas. Desde nuestra fundación, nos hemos dedicado a ofrecer a nuestros clientes la mejor experiencia en el mundo del gaming. Nos enorgullece ser un destino confiable para los aficionados a los videojuegos de todas las edades y niveles de experiencia.
-        </p>
-        <p>
-          Nuestra misión es proporcionar una amplia gama de productos de alta calidad, desde los últimos lanzamientos hasta los clásicos atemporales, garantizando que nuestros clientes encuentren siempre lo que están buscando. Nos esforzamos por ofrecer un servicio excepcional y una atención al cliente personalizada, para que cada compra sea una experiencia satisfactoria y emocionante.
-        </p>
-        <p>
-          En Cuevigames, no solo vendemos productos, sino que también compartimos la misma pasión por los videojuegos que nuestros clientes. Por eso, nos esforzamos por mantenernos actualizados con las últimas tendencias y novedades de la industria, para poder ofrecer recomendaciones expertas y asesoramiento a nuestros clientes.
-        </p>
-        <p>
-          Desde nuestro equipo hasta nuestro catálogo de productos, todo en Cuevigames está diseñado para brindarte la mejor experiencia de compra en línea. Estamos comprometidos con la excelencia en todo lo que hacemos y trabajamos constantemente para superar las expectativas de nuestros clientes.
-        </p>
-        <p>
-          Gracias por visitar Cuevigames. Esperamos poder acompañarte en tu viaje por el emocionante mundo de los videojuegos y las consolas.
-        </p>
-        <h5>
-          ¡Únete a nosotros y comienza a jugar hoy mismo!
-        </h5>
-     </div>
-     <div class="ubi">
-      <h2>Nos puedes encontrar en:</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.3772952866757!2d-100.31608332382523!3d25.725033710117867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86629452551ea79f%3A0x66e03550ec5730cb!2sFacultad%20de%20Ingenier%C3%ADa%20Mec%C3%A1nica%20y%20El%C3%A9ctrica!5e0!3m2!1ses-419!2smx!4v1709271797746!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-     </div>
     </section>
     <footer>
       <a href="index.html"><img src="multtimedia/logo.png" alt="logo"></a>
