--- a/Index.html
+++ b/Index.html
@@ -124,16 +124,14 @@
         </figure>
         <div class="info-product">
           <h2>FC24</h2>
-          <p class="price">$1,599lkj
-
-          </p>
+          <p class="price">$1,599</p>
           <button type="button" class="botonadolfo">Comprar</button>
         </div>
       </div>
     </section>
     <section class="separador">
       <h4>
-          <span>Productos Destacados</span>
+          <span>Nosotros</span>
       </h4>
     </section>
     <section  id="nosotrosss" class="nosotross">
