--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <header>
+    <header class="sticky-sm-top sticky-md-top sticky-lg-top sticky-xl-top sticky-xxl-top">
       <nav class="navbar nav1">
         <div class="container">
           <a class="navbar-brand" href="index.html">
@@ -129,14 +129,16 @@
         </div>
       </div>
     </section>
-    <section class="separador">
+    <section  id="nosotrosss" class="separador">
       <h4>
           <span>Nosotros</span>
       </h4>
     </section>
-    <section  id="nosotrosss" class="nosotross">
+    <section class="nosotross">
      <div class="texto">
-        <h2>Un poco de nuestra esencia.</h2>
+        <div class="titulo">
+          <h2>Un poco de nuestra esencia.</h2>
+        </div>
         <p>
           En Cuevigames, somos apasionados por los videojuegos y las consolas. Desde nuestra fundación, nos hemos dedicado a ofrecer a nuestros clientes la mejor experiencia en el mundo del gaming. Nos enorgullece ser un destino confiable para los aficionados a los videojuegos de todas las edades y niveles de experiencia.
         </p>
@@ -156,10 +158,13 @@
           ¡Únete a nosotros y comienza a jugar hoy mismo!
         </h5>
      </div>
-     <div class="ubi">
-      <h2>Nos puedes encontrar en:</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.3772952866757!2d-100.31608332382523!3d25.725033710117867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86629452551ea79f%3A0x66e03550ec5730cb!2sFacultad%20de%20Ingenier%C3%ADa%20Mec%C3%A1nica%20y%20El%C3%A9ctrica!5e0!3m2!1ses-419!2smx!4v1709271797746!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-     </div>
+    </section>
+    <section class="ubi">
+      <div class="titulo">
+        <h2>Nos puedes encontrar en</h2>
+      </div>
+      <div class="iframe-container"></div>
+      <iframe class="iframe-responsivo" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.31287879297!2d-100.31635768860659!3d25.727164827279356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86629452551ea79f%3A0x66e03550ec5730cb!2sFacultad%20de%20Ingenier%C3%ADa%20Mec%C3%A1nica%20y%20El%C3%A9ctrica!5e0!3m2!1ses-419!2smx!4v1709801839019!5m2!1ses-419!2smx" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
     <footer>
       <a href="index.html"><img src="multtimedia/logo.png" alt="logo"></a>
