--- a/consolas.html
+++ b/consolas.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <header>
+    <header class="sticky-sm-top sticky-md-top sticky-lg-top sticky-xl-top sticky-xxl-top">
       <nav class="navbar nav1">
         <div class="container">
           <a class="navbar-brand" href="index.html">
@@ -96,13 +96,54 @@
         </figure>
         <div class="info-product">
           <h2>FC24</h2>
-          <p class="price">$1,599lkj
-            
+          <p class="price">$1,599
+          </p>
+          <button type="button" class="botonadolfo">Comprar</button>
+        </div>
+      </div>
+      <div class="item">
+        <figure>
+          <a href="xbox.html"><img class="ima" src="multtimedia/consola1.jpg" alt="xbox"></a>
+        </figure>
+        <div class="info-product">
+          <h2>Xbox Series X</h2>
+          <p class="price">$12,999</p>
+          <button type="button" class="botonadolfo">Comprar</button>
+        </div>
+      </div>
+      <div class="item">
+        <figure>
+          <a href=""><img class="ima" src="multtimedia/juego1.jpg" alt="cod"></a>
+        </figure>
+        <div class="info-product">
+          <h2>Call of Duty</h2>
+          <p class="price">$1,599</p>
+          <button type="button" class="botonadolfo">Comprar</button>
+        </div>
+      </div>
+      <div class="item">
+        <figure>
+          <a href=""><img class="ima" src="multtimedia/consola2.jpg" alt="playstation"></a>
+        </figure>
+        <div class="info-product">
+          <h2>Playstation 5</h2>
+          <p class="price">$12,999</p>
+          <button type="button" class="botonadolfo">Comprar</button>
+        </div>
+      </div>
+      <div class="item">
+        <figure>
+          <a href=""><img class="ima" src="multtimedia/juego 2.jpg" alt="FC24"></a>
+        </figure>
+        <div class="info-product">
+          <h2>FC24</h2>
+          <p class="price">$1,599
           </p>
           <button type="button" class="botonadolfo">Comprar</button>
         </div>
       </div>
     </section>
+    <section class="separador1"></section>
     <footer>
       <a href="index.html"><img src="multtimedia/logo.png" alt="logo"></a>
       <h3>©2024 Cuevigames SA de CV.</h3>
