--- a/Index.html
+++ b/Index.html
@@ -55,28 +55,23 @@
       </nav>
     </header>
     <section>
-      <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
+      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="multtimedia/fondo1.jpg" class="d-block w-100" alt="jersey-charly">
+            <img src="multtimedia/fondo1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="multtimedia/fondo2.jpg" class="d-block w-100" alt="mariovsdonkey">
+            <img src="multtimedia/fondo2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="multtimedia/fondo3.jpg" class="d-block w-100" alt="madden">
+            <img src="multtimedia/fondo3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
