--- a/consolas.html
+++ b/consolas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pre-entrega3</title>
+    <title>Cuevigames - Consolas</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
@@ -42,7 +42,7 @@
                     <li><a class="dropdown-item" href="consolas.html">Consolas</a></li>
                     <li><a class="dropdown-item" href="videojuegos.html">videojuegos</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#nosotrosss">Nosotros</a></li>
+                    <li><a class="dropdown-item" href="index.html#nosotrosss">Nosotros</a></li>
                 </ul>
                 </li>
               </ul>
