--- a/Index.html
+++ b/Index.html
@@ -163,7 +163,10 @@
     </section>
     <footer>
       <a href="index.html"><img src="multtimedia/logo.png" alt="logo"></a>
-      <h3>©2024 Cuevigames SA de CV.</h3>
+      <div class="derecha">
+        <h3>©2024 Cuevigames SA de CV.</h3>
+        <a href="registro.html"><button type="button" class="botonadolfo">contactanos</button></a>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
