--- a/consolas.html
+++ b/consolas.html
@@ -142,11 +142,55 @@
           <button type="button" class="botonadolfo">Comprar</button>
         </div>
       </div>
+      <div class="item">
+        <figure>
+          <a href="xbox.html"><img class="ima" src="multtimedia/consola1.jpg" alt="xbox"></a>
+        </figure>
+        <div class="info-product">
+          <h2>Xbox Series X</h2>
+          <p class="price">$12,999</p>
+          <button type="button" class="botonadolfo">Comprar</button>
+        </div>
+      </div>
+      <div class="item">
+        <figure>
+          <a href=""><img class="ima" src="multtimedia/juego1.jpg" alt="cod"></a>
+        </figure>
+        <div class="info-product">
+          <h2>Call of Duty</h2>
+          <p class="price">$1,599</p>
+          <button type="button" class="botonadolfo">Comprar</button>
+        </div>
+      </div>
+      <div class="item">
+        <figure>
+          <a href=""><img class="ima" src="multtimedia/consola2.jpg" alt="playstation"></a>
+        </figure>
+        <div class="info-product">
+          <h2>Playstation 5</h2>
+          <p class="price">$12,999</p>
+          <button type="button" class="botonadolfo">Comprar</button>
+        </div>
+      </div>
+      <div class="item">
+        <figure>
+          <a href=""><img class="ima" src="multtimedia/juego 2.jpg" alt="FC24"></a>
+        </figure>
+        <div class="info-product">
+          <h2>FC24</h2>
+          <p class="price">$1,599
+          </p>
+          <button type="button" class="botonadolfo">Comprar</button>
+        </div>
+      </div>
     </section>
     <section class="separador1"></section>
     <footer>
       <a href="index.html"><img src="multtimedia/logo.png" alt="logo"></a>
-      <h3>©2024 Cuevigames SA de CV.</h3>
+      <div class="derecha">
+        <h3>©2024 Cuevigames SA de CV.</h3>
+        <a href="registro.html"><button type="button" class="botonadolfo">contactanos</button></a>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
