--- a/registro.html
+++ b/registro.html
@@ -46,9 +46,10 @@
                         <input type="password">
                     </div>
                     <div class="cuenta">
-                        <p>Ya tienes una cuenta? <a href="iniciossesion.html">Entra Aqui!</a></p>
-                        <a href="iniciossesion.html"><button type="button" class="botonadolfo">REGISTRAR</button></a>
+                        <p>Ya tienes una cuenta? <a href="iniciar.html">Entra Aqui!</a></p>
+                        <a href="iniciar.html"><button type="button" class="botonadolfo">REGISTRAR</button></a>
                     </div>
+                </div>
             </form>
         </div>
     </section>
