--- a/iniciar.html
+++ b/iniciar.html
@@ -34,7 +34,7 @@
                         <input type="password">
                     </div>
                     <div class="cuenta">
-                        <p>No tienes una cuenta? <a href="registrarse.html">Entra Aqui!</a></p>
+                        <p>No tienes una cuenta? <a href="registro.html">Entra Aqui!</a></p>
                         <a href="index.html"><button type="button" class="botonadolfo">INICIAR SESION</button></a>
                     </div>
             </form>
