--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <header class="sticky-sm-top sticky-md-top sticky-lg-top sticky-xl-top sticky-xxl-top">
       <nav class="navbar nav1">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand contenedor" href="index.html">
             <img src="multtimedia/logo.png" alt="logo">
           </a>
           <ul>
