--- a/xbox.html
+++ b/xbox.html
@@ -54,7 +54,7 @@
             </div>
         </nav>
     </header>
-    <section class="producto">
+    <section class="producto producto1">
         <div class="muestrario">
             <div id="carouselExampleAutoplaying" class="carousel slide carruseladolfo" data-bs-ride="carousel">
                 <div class="carousel-inner">
