--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
                   <a class="nav-link active" aria-current="page" href="consolas.html">Consolas</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="videojuegos.html">videojuegos</a>
+                  <a class="nav-link" href="videojuegos.html">Videojuegos</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -90,37 +90,37 @@
         <div class="info-product">
           <h2>Xbox Series X</h2>
           <p class="price">$12,999</p>
-          <button type="button" class="botonadolfo">Comprar</button>
+          <a href="xbox.html" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
         </div>
       </div>
       <div class="item">
         <figure>
-          <a href=""><img class="ima" src="multtimedia/juego1.jpg" alt="cod"></a>
+          <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank"><img class="ima" src="multtimedia/juego1.jpg" alt="cod"></a>
         </figure>
         <div class="info-product">
           <h2>Call of Duty</h2>
           <p class="price">$1,599</p>
-          <button type="button" class="botonadolfo">Comprar</button>
+          <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
         </div>
       </div>
       <div class="item">
         <figure>
-          <a href=""><img class="ima" src="multtimedia/consola2.jpg" alt="playstation"></a>
+          <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank"><img class="ima" src="multtimedia/consola2.jpg" alt="playstation"></a>
         </figure>
         <div class="info-product">
           <h2>Playstation 5</h2>
           <p class="price">$12,999</p>
-          <button type="button" class="botonadolfo">Comprar</button>
+          <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
         </div>
       </div>
       <div class="item">
         <figure>
-          <a href=""><img class="ima" src="multtimedia/juego 2.jpg" alt="FC24"></a>
+          <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank"><img class="ima" src="multtimedia/juego 2.jpg" alt="FC24"></a>
         </figure>
         <div class="info-product">
           <h2>FC24</h2>
           <p class="price">$1,599</p>
-          <button type="button" class="botonadolfo">Comprar</button>
+          <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
         </div>
       </div>
     </section>
