--- a/videojuegos.html
+++ b/videojuegos.html
@@ -56,7 +56,7 @@
     </header>
     <section class="separador">
       <h4>
-          <span>Consolas</span>
+          <span>Videojuegos</span>
       </h4>
     </section>
     <section class="container-item">
@@ -72,12 +72,12 @@
         </div>
         <div class="item">
           <figure>
-            <a href="https://gameplanet.com/producto/consola-nintendo-switch-modelo-oled-joy-con-blanca-nsw/" target="_blank"><img class="ima" src="multtimedia/consola3.jpg" alt="cod"></a>
+            <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank"><img class="ima" src="multtimedia/juego1.jpg" alt="cod"></a>
           </figure>
           <div class="info-product">
-            <h2>Nintendo Switch</h2>
-            <p class="price">$7,399</p>
-            <a href="https://gameplanet.com/producto/consola-nintendo-switch-modelo-oled-joy-con-blanca-nsw/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+            <h2>Call of Duty</h2>
+            <p class="price">$1,599</p>
+            <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
           </div>
         </div>
         <div class="item">
@@ -92,52 +92,92 @@
         </div>
         <div class="item">
           <figure>
-            <a href="https://gameplanet.com/producto/consola-xbox-series-s-1tb-carbon-black-xsx/" target="_blank"><img class="ima" src="multtimedia/consola4.jpg" alt="FC24"></a>
+            <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank"><img class="ima" src="multtimedia/juego 2.jpg" alt="FC24"></a>
           </figure>
           <div class="info-product">
-            <h2>Xbox Series S</h2>
-            <p class="price">$8,398</p>
-            <a href="https://gameplanet.com/producto/consola-xbox-series-s-1tb-carbon-black-xsx/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+            <h2>FC24</h2>
+            <p class="price">$1,599</p>
+            <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
           </div>
         </div>
         <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/consola-nintendo-switch-lite-32gb-coral-pink-nsw/" target="_blank"><img class="ima" src="multtimedia/consola5.jpg" alt="xbox"></a>
+              <a href="xbox.html"><img class="ima" src="multtimedia/consola1.jpg" alt="xbox"></a>
             </figure>
             <div class="info-product">
-              <h2>Switch Lite</h2>
-              <p class="price">$4,099</p>
-              <a href="https://gameplanet.com/producto/consola-nintendo-switch-lite-32gb-coral-pink-nsw/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+              <h2>Xbox Series X</h2>
+              <p class="price">$12,999</p>
+              <a href="xbox.html" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
             </div>
           </div>
           <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/consola-game-and-watch-the-legend-of-zelda-nsw/" target="_blank"><img class="ima" src="multtimedia/consola6.jpg" alt="cod"></a>
+              <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank"><img class="ima" src="multtimedia/juego1.jpg" alt="cod"></a>
             </figure>
             <div class="info-product">
-              <h2>Game and Watch</h2>
+              <h2>Call of Duty</h2>
               <p class="price">$1,599</p>
-              <a href="https://gameplanet.com/producto/consola-game-and-watch-the-legend-of-zelda-nsw/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+              <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
             </div>
           </div>
           <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/steam-deck-64-gb-pcs/" target="_blank"><img class="ima" src="multtimedia/consola7.jpg" alt="playstation"></a>
+              <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank"><img class="ima" src="multtimedia/consola2.jpg" alt="playstation"></a>
             </figure>
             <div class="info-product">
-              <h2>Steam Deck</h2>
-              <p class="price">$11,999</p>
-              <a href="https://gameplanet.com/producto/steam-deck-64-gb-pcs/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+              <h2>Playstation 5</h2>
+              <p class="price">$12,999</p>
+              <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
             </div>
           </div>
           <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/consola-retron-1-hd-gris/" target="_blank"><img class="ima" src="multtimedia/consola8.jpg" alt="FC24"></a>
+              <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank"><img class="ima" src="multtimedia/juego 2.jpg" alt="FC24"></a>
             </figure>
             <div class="info-product">
-              <h2>Consola Retron</h2>
-              <p class="price">$599</p>
-              <a href="https://gameplanet.com/producto/consola-retron-1-hd-gris/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+              <h2>FC24</h2>
+              <p class="price">$1,599</p>
+              <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+            </div>
+          </div>
+          <div class="item">
+            <figure>
+              <a href="xbox.html"><img class="ima" src="multtimedia/consola1.jpg" alt="xbox"></a>
+            </figure>
+            <div class="info-product">
+              <h2>Xbox Series X</h2>
+              <p class="price">$12,999</p>
+              <a href="xbox.html" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+            </div>
+          </div>
+          <div class="item">
+            <figure>
+              <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank"><img class="ima" src="multtimedia/juego1.jpg" alt="cod"></a>
+            </figure>
+            <div class="info-product">
+              <h2>Call of Duty</h2>
+              <p class="price">$1,599</p>
+              <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+            </div>
+          </div>
+          <div class="item">
+            <figure>
+              <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank"><img class="ima" src="multtimedia/consola2.jpg" alt="playstation"></a>
+            </figure>
+            <div class="info-product">
+              <h2>Playstation 5</h2>
+              <p class="price">$12,999</p>
+              <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+            </div>
+          </div>
+          <div class="item">
+            <figure>
+              <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank"><img class="ima" src="multtimedia/juego 2.jpg" alt="FC24"></a>
+            </figure>
+            <div class="info-product">
+              <h2>FC24</h2>
+              <p class="price">$1,599</p>
+              <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
             </div>
           </div>
       </section>
