--- a/consolas.html
+++ b/consolas.html
@@ -62,7 +62,7 @@
     <section class="container-item">
         <div class="item">
           <figure>
-            <a href="xbox.html"><img class="ima" src="multtimedia/consola1.jpg" alt="xbox"></a>
+            <a href="xbox.html"><img class="ima" src="multtimedia/consola1.jpg" alt="Xbox Series X"></a>
           </figure>
           <div class="info-product">
             <h2>Xbox Series X</h2>
@@ -72,7 +72,7 @@
         </div>
         <div class="item">
           <figure>
-            <a href="https://gameplanet.com/producto/consola-nintendo-switch-modelo-oled-joy-con-blanca-nsw/" target="_blank"><img class="ima" src="multtimedia/consola3.jpg" alt="cod"></a>
+            <a href="https://gameplanet.com/producto/consola-nintendo-switch-modelo-oled-joy-con-blanca-nsw/" target="_blank"><img class="ima" src="multtimedia/consola3.jpg" alt="Nintendo Switch"></a>
           </figure>
           <div class="info-product">
             <h2>Nintendo Switch</h2>
@@ -92,7 +92,7 @@
         </div>
         <div class="item">
           <figure>
-            <a href="https://gameplanet.com/producto/consola-xbox-series-s-1tb-carbon-black-xsx/" target="_blank"><img class="ima" src="multtimedia/consola4.jpg" alt="FC24"></a>
+            <a href="https://gameplanet.com/producto/consola-xbox-series-s-1tb-carbon-black-xsx/" target="_blank"><img class="ima" src="multtimedia/consola4.jpg" alt="Xbox Series S"></a>
           </figure>
           <div class="info-product">
             <h2>Xbox Series S</h2>
@@ -102,7 +102,7 @@
         </div>
         <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/consola-nintendo-switch-lite-32gb-coral-pink-nsw/" target="_blank"><img class="ima" src="multtimedia/consola5.jpg" alt="xbox"></a>
+              <a href="https://gameplanet.com/producto/consola-nintendo-switch-lite-32gb-coral-pink-nsw/" target="_blank"><img class="ima" src="multtimedia/consola5.jpg" alt="Switch Lite"></a>
             </figure>
             <div class="info-product">
               <h2>Switch Lite</h2>
@@ -112,7 +112,7 @@
           </div>
           <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/consola-game-and-watch-the-legend-of-zelda-nsw/" target="_blank"><img class="ima" src="multtimedia/consola6.jpg" alt="cod"></a>
+              <a href="https://gameplanet.com/producto/consola-game-and-watch-the-legend-of-zelda-nsw/" target="_blank"><img class="ima" src="multtimedia/consola6.jpg" alt="Game and Watch"></a>
             </figure>
             <div class="info-product">
               <h2>Game and Watch</h2>
@@ -122,7 +122,7 @@
           </div>
           <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/steam-deck-64-gb-pcs/" target="_blank"><img class="ima" src="multtimedia/consola7.jpg" alt="playstation"></a>
+              <a href="https://gameplanet.com/producto/steam-deck-64-gb-pcs/" target="_blank"><img class="ima" src="multtimedia/consola7.jpg" alt="SteamDeck"></a>
             </figure>
             <div class="info-product">
               <h2>Steam Deck</h2>
@@ -132,7 +132,7 @@
           </div>
           <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/consola-retron-1-hd-gris/" target="_blank"><img class="ima" src="multtimedia/consola8.jpg" alt="FC24"></a>
+              <a href="https://gameplanet.com/producto/consola-retron-1-hd-gris/" target="_blank"><img class="ima" src="multtimedia/consola8.jpg" alt="Consolaretro"></a>
             </figure>
             <div class="info-product">
               <h2>Consola Retron</h2>
