--- a/videojuegos.html
+++ b/videojuegos.html
@@ -62,17 +62,17 @@
     <section class="container-item">
         <div class="item">
           <figure>
-            <a href="xbox.html"><img class="ima" src="multtimedia/consola1.jpg" alt="xbox"></a>
+            <a href="https://gameplanet.com/producto/grand-theft-auto-v-premium-edition-xone/" target="_blank"><img class="ima" src="multtimedia/juego3.jpg" alt="GTA V"></a>
           </figure>
           <div class="info-product">
-            <h2>Xbox Series X</h2>
-            <p class="price">$12,999</p>
-            <a href="xbox.html" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+            <h2>GTA V</h2>
+            <p class="price">$551</p>
+            <a href="https://gameplanet.com/producto/grand-theft-auto-v-premium-edition-xone/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
           </div>
         </div>
         <div class="item">
           <figure>
-            <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank"><img class="ima" src="multtimedia/juego1.jpg" alt="cod"></a>
+            <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank"><img class="ima" src="multtimedia/juego1.jpg" alt="COD"></a>
           </figure>
           <div class="info-product">
             <h2>Call of Duty</h2>
@@ -82,12 +82,12 @@
         </div>
         <div class="item">
           <figure>
-            <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank"><img class="ima" src="multtimedia/consola2.jpg" alt="playstation"></a>
+            <a href="https://gameplanet.com/producto/super-mario-bros-wondernsw/" target="_blank"><img class="ima" src="multtimedia/juego4.jpg" alt="Mario Wonder"></a>
           </figure>
           <div class="info-product">
-            <h2>Playstation 5</h2>
-            <p class="price">$12,999</p>
-            <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+            <h2>Mario Wonder</h2>
+            <p class="price">$1,199</p>
+            <a href="https://gameplanet.com/producto/super-mario-bros-wondernsw/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
           </div>
         </div>
         <div class="item">
@@ -102,82 +102,42 @@
         </div>
         <div class="item">
             <figure>
-              <a href="xbox.html"><img class="ima" src="multtimedia/consola1.jpg" alt="xbox"></a>
+              <a href="https://gameplanet.com/producto/the-legend-of-zelda-tears-of-the-kingdom-nsw/" target="_blank"><img class="ima" src="multtimedia/juego5.jpg" alt="Zelda"></a>
             </figure>
             <div class="info-product">
-              <h2>Xbox Series X</h2>
-              <p class="price">$12,999</p>
-              <a href="xbox.html" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+              <h2>Zalda</h2>
+              <p class="price">$1,099</p>
+              <a href="https://gameplanet.com/producto/the-legend-of-zelda-tears-of-the-kingdom-nsw/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
             </div>
           </div>
           <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank"><img class="ima" src="multtimedia/juego1.jpg" alt="cod"></a>
+              <a href="https://gameplanet.com/producto/fallout-76-ps4/" target="_blank"><img class="ima" src="multtimedia/juego6.jpg" alt="FALLOUT"></a>
             </figure>
             <div class="info-product">
-              <h2>Call of Duty</h2>
-              <p class="price">$1,599</p>
-              <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+              <h2>Fallout 76</h2>
+              <p class="price">$79</p>
+              <a href="https://gameplanet.com/producto/fallout-76-ps4/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
             </div>
           </div>
           <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank"><img class="ima" src="multtimedia/consola2.jpg" alt="playstation"></a>
+              <a href="https://gameplanet.com/producto/splatoon-3-nsw/" target="_blank"><img class="ima" src="multtimedia/juego7.jpg" alt="Splatoon 3"></a>
             </figure>
             <div class="info-product">
               <h2>Playstation 5</h2>
-              <p class="price">$12,999</p>
-              <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+              <p class="price">$1,099</p>
+              <a href="https://gameplanet.com/producto/splatoon-3-nsw/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
             </div>
           </div>
           <div class="item">
             <figure>
-              <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank"><img class="ima" src="multtimedia/juego 2.jpg" alt="FC24"></a>
+              <a href="https://gameplanet.com/producto/ea-sports-fc-24-xsx/" target="_blank"><img class="ima" src="multtimedia/juego8.jpg" alt="FC24"></a>
             </figure>
             <div class="info-product">
               <h2>FC24</h2>
-              <p class="price">$1,599</p>
-              <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
-            </div>
-          </div>
-          <div class="item">
-            <figure>
-              <a href="xbox.html"><img class="ima" src="multtimedia/consola1.jpg" alt="xbox"></a>
-            </figure>
-            <div class="info-product">
-              <h2>Xbox Series X</h2>
-              <p class="price">$12,999</p>
-              <a href="xbox.html" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
-            </div>
-          </div>
-          <div class="item">
-            <figure>
-              <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank"><img class="ima" src="multtimedia/juego1.jpg" alt="cod"></a>
-            </figure>
-            <div class="info-product">
-              <h2>Call of Duty</h2>
-              <p class="price">$1,599</p>
-              <a href="https://gameplanet.com/producto/call-of-duty-modern-warfare-iii-xsx/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
-            </div>
-          </div>
-          <div class="item">
-            <figure>
-              <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank"><img class="ima" src="multtimedia/consola2.jpg" alt="playstation"></a>
-            </figure>
-            <div class="info-product">
-              <h2>Playstation 5</h2>
-              <p class="price">$12,999</p>
-              <a href="https://gameplanet.com/producto/consola-playstation-5-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
-            </div>
-          </div>
-          <div class="item">
-            <figure>
-              <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank"><img class="ima" src="multtimedia/juego 2.jpg" alt="FC24"></a>
-            </figure>
-            <div class="info-product">
-              <h2>FC24</h2>
-              <p class="price">$1,599</p>
-              <a href="https://gameplanet.com/producto/ea-sports-fc-24-ps5/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
+              <p class="price">$1,471</p>
+              <a href="https://gameplanet.com/producto/ea-sports-fc-24-xsx/" target="_blank" rel="noopener noreferrer"><button type="button" class="botonadolfo">Comprar</button></a>
             </div>
           </div>
       </section>
